web: Prevent line wrapping in tabulation cells

--- a/data/web/static/css/layout.css
+++ b/data/web/static/css/layout.css
@@ -259,3 +259,7 @@ th.sideways > div > div:after {
     display: block;
     margin: -1.5em 0 100%;
 }
+
+tr.oneline td, tr.oneline th {
+    white-space: nowrap;
+}
